--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ android {
     namespace 'com.example.weatherapi'
     compileSdk 33
 
+    buildFeatures {
+        buildConfig true
+    }
     defaultConfig {
         applicationId "com.example.weatherapi"
         minSdk 21
@@ -41,7 +44,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
         resources {
@@ -54,9 +57,9 @@ kapt {
 }
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.21'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -106,6 +109,10 @@ dependencies {
     //Room
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
+
+// Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Google play's location library
     implementation 'com.google.android.gms:play-services-location:21.0.1'
@@ -117,4 +124,9 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
 
 
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
